--- a/templates/package.json
+++ b/templates/package.json
@@ -1,6 +1,6 @@
 {
   "name": "templates",
-  "version": "0.1.10",
+  "version": "0.1.11-rc.0",
   "private": "true",
   "license": "MIT",
   "scripts": {
