Revert "chore(release): publish detail"
This reverts commit 730e96a3d83cb83e767461fc36110fab75f1373a.

--- a/packages/failpoint-ts/package.json
+++ b/packages/failpoint-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/failpoint-ts",
-  "version": "0.0.4-rc.0",
+  "version": "0.0.3",
   "description": "Fault Injection for TypeScript",
   "keywords": [
     "Fault Injection"
