--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -66,7 +66,6 @@
     "@azure/identity": "^2.0.1",
     "@azure/msal-node": "~1.1.0",
     "@microsoft/microsoft-graph-client": "^2.2.1",
-    "@microsoft/teams-js": "^1.9.0",
     "axios": "^0.24.0",
     "botbuilder": ">=4.15.0-rc0 <5.0.0",
     "botbuilder-core": ">=4.15.0-rc0 <5.0.0",
@@ -76,6 +75,9 @@
     "tedious": "^14.0.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2"
+  },
+  "peerDependencies": {
+    "@microsoft/teams-js": "^1.9.0"
   },
   "devDependencies": {
     "@azure/arm-sql": "^7.0.2",
