--- a/packages/fx-core/.vscode/launch.json
+++ b/packages/fx-core/.vscode/launch.json
@@ -11,7 +11,7 @@
         "ts-node/register",
         "--no-timeouts",
         "--colors",
-        "${workspaceFolder}/tests/**/*.test.ts"
+        "${workspaceFolder}/tests/plugins/resource/bot/unit/generateArmTemplates.test.ts"
       ],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
