--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -87,6 +87,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@microsoft/api-documenter": "^7.12.4",
     "@microsoft/api-extractor": "7.7.11",
+    "@microsoft/teams-js": "^1.9.0",
     "@rollup/plugin-commonjs": "^13.0.2",
     "@rollup/plugin-json": "^4.0.0",
     "@rollup/plugin-multi-entry": "^3.0.0",
