--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -66,7 +66,6 @@
     "@azure/identity": "^2.0.1",
     "@azure/msal-node": "~1.1.0",
     "@microsoft/microsoft-graph-client": "^2.2.1",
-    "@microsoft/teams-js": "^1.9.0",
     "axios": "^0.24.0",
     "botbuilder": ">=4.15.0-rc0 <5.0.0",
     "botbuilder-core": ">=4.15.0-rc0 <5.0.0",
@@ -77,6 +76,9 @@
     "tslib": "^2.0.0",
     "uuid": "^8.3.2"
   },
+  "peerDependencies": {
+    "@microsoft/teams-js": "^1.9.0"
+  },
   "devDependencies": {
     "@azure/arm-sql": "^7.0.2",
     "@azure/ms-rest-nodeauth": "^3.1.0",
@@ -85,6 +87,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@microsoft/api-documenter": "^7.12.4",
     "@microsoft/api-extractor": "7.7.11",
+    "@microsoft/teams-js": "^1.9.0",
     "@rollup/plugin-commonjs": "^13.0.2",
     "@rollup/plugin-json": "^4.0.0",
     "@rollup/plugin-multi-entry": "^3.0.0",
