--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx",
-  "version": "0.3.1",
+  "version": "0.3.1-beta.0",
   "description": "Microsoft Teams Framework for Node.js and browser.",
   "main": "dist/index.js",
   "module": "dist-esm/src/index.js",
@@ -77,7 +77,7 @@
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "@microsoft/teams-js": "^1.9.0"
+    "@microsoft/teams-js": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "@azure/arm-sql": "^7.0.2",
@@ -87,7 +87,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@microsoft/api-documenter": "^7.12.4",
     "@microsoft/api-extractor": "7.7.11",
-    "@microsoft/teams-js": "^1.9.0",
+    "@microsoft/teams-js": "^2.0.0-beta.0",
     "@rollup/plugin-commonjs": "^13.0.2",
     "@rollup/plugin-json": "^4.0.0",
     "@rollup/plugin-multi-entry": "^3.0.0",
