chore(release): publish detail
 - @microsoft/teamsfx-cli@0.7.3-rc.0
 - @microsoft/teamsfx-core@0.11.0-rc.0
 - @microsoft/teamsfx@0.3.2-rc.0
 - ms-teams-vscode-extension@2.10.0-rc.0

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -2,7 +2,7 @@
   "name": "ms-teams-vscode-extension",
   "displayName": "Teams Toolkit (Preview)",
   "description": "Create, debug, and deploy Teams apps with Teams Toolkit",
-  "version": "2.9.0",
+  "version": "2.10.0-rc.0",
   "publisher": "TeamsDevApp",
   "author": "Microsoft Corporation",
   "icon": "media/teams.png",
@@ -814,7 +814,7 @@
     "@azure/ms-rest-nodeauth": "^3.0.7",
     "@azure/msal-node": "^1.0.0-beta.5",
     "@microsoft/teamsfx-api": "^0.10.0",
-    "@microsoft/teamsfx-core": "^0.10.0",
+    "@microsoft/teamsfx-core": "^0.11.0-rc.0",
     "@npmcli/package-json": "^1.0.1",
     "async-mutex": "^0.3.1",
     "dotenv": "^8.2.0",
