--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -678,9 +678,9 @@
       {
         "title": "Teams Toolkit",
         "properties": {
-          "fx-extension.insiderPreview": {
+          "fx-extension.rollbackToToolkitV2": {
             "type": "boolean",
-            "description": "Enable insider preview features. (requires reload of VS Code)",
+            "description": "Rollback to Teams Toolkit v2. Notice the setting will be obsolete and removed soon. (requires reload of VS Code)",
             "default": false
           },
           "fx-extension.validateNode": {
