--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -425,7 +425,7 @@
       },
       {
         "command": "fx-extension.checkProjectUpgrade",
-        "title": "Teams: Check project upgrade"
+        "title": "Teams: Upgrade project"
       },
       {
         "command": "fx-extension.deploy",
