--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -44,7 +44,7 @@ jobs:
           # make sure the coverage data is cleaned
           rm -rf .nyc_output
           xvfb-run -a npx lerna run test:unit --stream
-          TEAMSFX_INSIDER_PREVIEW=true xvfb-run -a npx lerna run test:unit --stream
+          __TEAMSFX_INSIDER_PREVIEW=false xvfb-run -a npx lerna run test:unit --stream
 
           coverages="{}"
           for i in $(find . -name coverage-summary.json); do
@@ -85,7 +85,7 @@ jobs:
         run: |
           rm -rf .nyc_output
           xvfb-run -a npx lerna run test:unit --stream
-          TEAMSFX_INSIDER_PREVIEW=true xvfb-run -a npx lerna run test:unit --stream
+          __TEAMSFX_INSIDER_PREVIEW=false xvfb-run -a npx lerna run test:unit --stream
 
           coverages="{}"
           for i in $(find . -name coverage-summary.json); do
@@ -149,7 +149,9 @@ jobs:
         id: unit-test
         shell: bash
         run: |
+          rm -rf .nyc_output
           xvfb-run -a npx lerna run test:unit --stream
+          __TEAMSFX_INSIDER_PREVIEW=false xvfb-run -a npx lerna run test:unit --stream
           for i in $(find . -name coverage-summary.json); do
             package=$(basename $(dirname $(dirname $i)))
             az storage entity insert \
