--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -19,11 +19,11 @@
     "lint": "eslint \"**/*.ts\"",
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit:browser": "cross-env TEMP=\"D:\\Temp\" TMP=\"D:\\Temp\" karma start --single-run --unit",
-    "test:unit:node": "cross-env TS_NODE_FILES=true TS_NODE_CACHE=NO TS_NODE_COMPILER_OPTIONS='{\\\"module\\\":\\\"commonjs\\\",\\\"target\\\":\\\"es6\\\"}' nyc -- mocha 'test/unit/{,!(browser)/**/}*.spec.ts' --file src/index.ts --config config/mocharc.node.js",
+    "test:unit:node": "nyc --no-clean -- mocha 'test/unit/{,!(browser)/**/}*.spec.ts' --file src/index.ts -r config/mocha.env.ts --config config/mocharc.node.js",
     "test:unit": "npm run test:unit:node && npm run test:unit:browser",
     "test:e2e:browser": "node test/e2e/scripts/DownloadSimpleAuth.js && concurrently --kill-others --success first \"node test/e2e/scripts/StartSimpleAuth.js\" \"npm run test:e2e:browser-case\"",
     "test:e2e:browser-case": "cross-env TEMP=\"D:\\Temp\" TMP=\"D:\\Temp\" karma start --single-run --integration",
-    "test:e2e:node": "cross-env TS_NODE_FILES=true TS_NODE_CACHE=NO TS_NODE_COMPILER_OPTIONS='{\\\"module\\\":\\\"commonjs\\\",\\\"target\\\":\\\"es6\\\"}' nyc --reporter lcovonly -- mocha 'test/e2e/node/*.spec.ts' --file src/index.ts --config config/mocharc.node.js",
+    "test:e2e:node": "nyc --reporter lcovonly -- mocha 'test/e2e/node/*.spec.ts' --file src/index.ts -r config/mocha.env.ts --config config/mocharc.node.js",
     "test:e2e": "npm run test:e2e:node && npm run test:e2e:browser",
     "ui-test": "mocha --no-timeouts -r test/mocha.env.ts -r ts-node/register test/ui/**/*.spec.ts --exit",
     "precommit": "lint-staged",
