chore(sdk): ignore config file

--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -31,5 +31,5 @@
     "resolveJsonModule": true,
     "downlevelIteration": true
   },
-  "exclude": ["dist/**/*"]
+  "exclude": ["dist/**/*", "config/*"]
 }
