--- a/packages/api/src/schemas/envConfig.json
+++ b/packages/api/src/schemas/envConfig.json
@@ -48,7 +48,8 @@
         "subscriptionId": {
           "type": "string",
           "description": "The default subscription to provision Azure resources.",
-          "minLength": 1
+          "minLength": 1,
+          "pattern": "^[0-9a-fA-F]{8}-([0-9a-fA-F]{4}-){3}[0-9a-fA-F]{12}$"
         },
         "resourceGroupName": {
           "type": "string",
