--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -2,49 +2,37 @@
   "name": "@microsoft/teamsfx",
   "version": "0.3.2",
   "description": "Microsoft Teams Framework for Node.js and browser.",
-  "main": "dist/index.js",
-  "module": "dist-esm/src/index.js",
-  "browser": {
-    "./dist-esm/src/core/cache.js": "./dist-esm/src/core/cache.browser.js",
-    "./dist-esm/src/credential/onBehalfOfUserCredential.js": "./dist-esm/src/credential/onBehalfOfUserCredential.browser.js",
-    "./dist-esm/src/core/sqlConnector.js": "./dist-esm/src/core/sqlConnector.browser.js",
-    "./dist-esm/src/credential/teamsUserCredential.js": "./dist-esm/src/credential/teamsUserCredential.browser.js",
-    "./dist-esm/src/credential/m365TenantCredential.js": "./dist-esm/src/credential/m365TenantCredential.browser.js",
-    "./dist-esm/src/bot/teamsBotSsoPrompt.js": "./dist-esm/src/bot/teamsBotSsoPrompt.browser.js"
-  },
+  "main": "dist/index.node.cjs.js",
+  "browser": "dist/index.esm2017.js",
+  "module": "dist/index.esm2017.mjs",
+  "esm5": "dist/index.esm5.js",
   "types": "types/teamsfx.d.ts",
   "scripts": {
-    "build:browser": "tsc -p . && cross-env ONLY_BROWSER=true rollup -c 2>&1",
-    "build:node": "tsc -p . && cross-env ONLY_NODE=true rollup -c 2>&1",
-    "build:test": "tsc -p . && rollup -c rollup.test.config.js 2>&1",
-    "build": "tsc -p . && npm run build:node && api-extractor run --local && npm run build:api-markdown",
+    "prebuild": "npm run clean",
+    "build": "rollup -c && api-extractor run --local && npm run api-markdown",
     "prepare": "npm run build",
-    "build:api-markdown": "api-documenter generate -i temp -o ../../docs/sdk",
-    "check-format": "prettier --list-different --config ./.prettierrc.json --ignore-path ./.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples/**/*.ts\" \"*.{js,json}\"",
+    "api-markdown": "api-documenter generate -i temp -o ../../docs/sdk",
     "clean": "rimraf dist dist-* temp types *.tgz *.log",
-    "format": "prettier --write --config ./.prettierrc.json --ignore-path ./.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples/**/*.ts\" \"*.{js,json}\"",
-    "e2e-test:browser-case": "karma start --single-run --glob=./dist-test/index.e2e.browser.js",
-    "e2e-test:browser": "node test/e2e/scripts/DownloadSimpleAuth.js && concurrently --kill-others --success first \"node test/e2e/scripts/StartSimpleAuth.js\" \"npm run e2e-test:browser-case\"",
-    "e2e-test:node": "mocha -r test/mocha.env.ts -r ts-node/register \"./test/e2e/node/*.spec.ts\" --timeout 100000 --exit --reporter ./tools/mocha-multi-reporter.js",
-    "test:e2e": "npm run e2e-test:node && npm run e2e-test:browser",
+    "check-format": "prettier --list-different \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\" \"config/*.js\"",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\" \"config/*.js\"",
     "lint:staged": "lint-staged",
     "lint": "eslint \"**/*.ts\"",
-    "prebuild": "npm run clean",
-    "test:browser": "npm run build:test && npm run unit-test:browser && npm run e2e-test:browser",
-    "test:node": "npm run build:test && npm run unit-test:node && npm run e2e-test:node",
     "test": "npm run test:unit && npm run test:e2e",
-    "unit-test:browser": "karma start --single-run --glob=./dist-test/index.unit.browser.js",
-    "unit-test:node": "nyc --no-clean mocha --no-timeouts -r test/mocha.env.ts --require ts-node/register \"test/unit/node/**/*.spec.ts\" \"test/unit/*.spec.ts\"",
-    "test:unit": "npm run build:test && npm run unit-test:node && npm run unit-test:browser",
+    "test:unit:browser": "cross-env karma start --single-run --unit",
+    "test:unit:node": "nyc --no-clean -- mocha 'test/unit/{,!(browser)/**/}*.spec.ts' --file src/index.ts -r config/mocha.env.ts --config config/mocharc.node.js",
+    "test:unit": "npm run test:unit:node && npm run test:unit:browser",
+    "test:e2e:browser": "node test/e2e/scripts/DownloadSimpleAuth.js && concurrently --kill-others --success first \"node test/e2e/scripts/StartSimpleAuth.js\" \"npm run test:e2e:browser-case\"",
+    "test:e2e:browser-case": "cross-env karma start --single-run --integration",
+    "test:e2e:node": "nyc --reporter lcovonly -- mocha 'test/e2e/node/*.spec.ts' --file src/index.ts -r config/mocha.env.ts --config config/mocharc.node.js",
+    "test:e2e": "npm run test:e2e:node && npm run test:e2e:browser",
     "ui-test": "mocha --no-timeouts -r test/mocha.env.ts -r ts-node/register test/ui/**/*.spec.ts --exit",
     "precommit": "lint-staged",
     "version": "../../.github/scripts/pkg-version.sh templates",
     "postversion": "../../.github/scripts/pkg-postversion.sh templates"
   },
   "files": [
-    "dist/",
-    "dist-browser/",
-    "dist-esm/src/",
+    "dist/*js",
+    "dist/*js.map",
     "types/teamsfx.d.ts",
     "README.md",
     "LICENSE"
@@ -61,58 +49,49 @@
   "homepage": "https://github.com/OfficeDev/TeamsFx",
   "sideEffects": false,
   "dependencies": {
-    "@azure/core-auth": "^1.3.0",
-    "@azure/core-http": "^1.2.0",
     "@azure/identity": "^2.0.1",
     "@azure/msal-node": "~1.1.0",
-    "@microsoft/microsoft-graph-client": "^2.2.1",
     "axios": "^0.24.0",
     "botbuilder": ">=4.15.0-rc0 <5.0.0",
-    "botbuilder-core": ">=4.15.0-rc0 <5.0.0",
     "botbuilder-dialogs": ">=4.15.0-rc0 <5.0.0",
     "jwt-decode": "^3.1.2",
-    "memory-cache": "^0.2.0",
-    "tedious": "^14.0.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "@microsoft/teams-js": "^1.9.0"
+    "@microsoft/teams-js": "^1.9.0",
+    "@microsoft/microsoft-graph-client": "^3.0.0"
   },
   "devDependencies": {
-    "@azure/arm-sql": "^7.0.2",
+    "@azure/arm-sql": "^8.0.0",
     "@azure/ms-rest-nodeauth": "^3.1.0",
     "@commitlint/cli": "^14.1.0",
     "@commitlint/config-conventional": "^12.0.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@microsoft/api-documenter": "^7.12.4",
-    "@microsoft/api-extractor": "7.7.11",
+    "@microsoft/api-documenter": "^7.13.68",
+    "@microsoft/api-extractor": "^7.18.19",
+    "@microsoft/microsoft-graph-client": "^3.0.0",
     "@microsoft/teams-js": "^1.9.0",
-    "@rollup/plugin-commonjs": "^13.0.2",
-    "@rollup/plugin-json": "^4.0.0",
-    "@rollup/plugin-multi-entry": "^3.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-replace": "^2.2.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@shared/eslint-config": "file:../eslint-config",
     "@shared/prettier-config": "file:../prettier-config",
-    "@types/chai": "^4.1.6",
-    "@types/chai-as-promised": "^7.1.0",
+    "@types/chai": "^4.2.22",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/fs-extra": "^9.0.11",
-    "@types/memory-cache": "^0.2.1",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^12.11.7",
-    "@types/sinon": "^9.0.10",
-    "@types/tedious": "^4.0.3",
-    "@types/url-join": "^4.0.0",
-    "@types/uuid": "^8.3.0",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.11.7",
+    "@types/sinon": "^10.0.6",
+    "@types/tedious": "^4.0.5",
+    "@types/url-join": "^4.0.1",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^4.13.0",
-    "adm-zip": "^0.5.5",
-    "chai": "^4.2.0",
+    "adm-zip": "^0.5.9",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "concurrently": "^6.0.2",
-    "cross-env": "^7.0.2",
-    "dotenv": "^8.2.0",
+    "concurrently": "^6.3.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
     "eslint": "^8.1.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
@@ -120,35 +99,36 @@
     "got": "^11.8.2",
     "isomorphic-fetch": "^3.0.0",
     "jwt-builder": "^1.1.0",
-    "karma": "^6.3.7",
-    "karma-chrome-launcher": "^3.0.0",
+    "karma": "^6.3.8",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage": "^2.0.0",
-    "karma-edge-launcher": "^0.4.2",
     "karma-env-preprocessor": "^0.1.1",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-ie-launcher": "^1.0.0",
     "karma-junit-reporter": "^2.0.1",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-webpack": "^5.0.0",
     "lint-staged": "^11.2.6",
     "mocha": "^9.1.3",
     "mocha-junit-reporter": "^2.0.2",
-    "mocked-env": "^1.3.2",
+    "mocked-env": "^1.3.5",
     "nyc": "^15.1.0",
-    "playwright-chromium": "^1.11.1",
     "prettier": "^2.4.1",
-    "puppeteer": "^9.1.1",
-    "rimraf": "^3.0.0",
-    "rollup": "^2.41.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^5.1.1",
+    "puppeteer": "^11.0.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.59.0",
+    "rollup-plugin-typescript2": "^0.30.0",
     "semver": "^7.3.5",
-    "sinon": "^9.2.4",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.2",
+    "sinon": "^12.0.1",
+    "source-map-loader": "^3.0.0",
+    "tedious": "^14.0.0",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4",
     "url-join": "^4.0.1",
-    "util": "^0.12.1"
+    "webpack": "^5.62.1",
+    "yargs": "^17.2.1"
   },
   "gitHead": "7d60c0765c0ea8c023a26c10d1c93001c597afbb",
   "publishConfig": {
