docs: short description

--- a/packages/fx-core/src/common/samples-config.json
+++ b/packages/fx-core/src/common/samples-config.json
@@ -54,14 +54,14 @@
         {
             "id": "hello-world-tab",
             "title": "Hello World Tab",
-            "shortDescription": "Hello World app of Microsoft Teams Tab app",
+            "shortDescription": "A Hello World app of Microsoft Teams Tab app",
             "fullDescription": "This is a Hello World app of Microsoft Teams Tab app which accomplishes very simple function like single-sign on. You can run this app locally or deploy it to Microsoft Azure. This app only has a Tab frontend.",
             "tags": ["Tab", "TS", "Ready to F5 Preview"]
         },
         {
             "id": "hello-world-tab-with-backend",
             "title": "Hello World Tab with Backend",
-            "shortDescription": "Hello World app of Microsoft Teams Tab app",
+            "shortDescription": "A Hello World app of Microsoft Teams Tab app which has a backend service",
             "fullDescription": "This is a Hello World app of Microsoft Teams Tab app which accomplishes very simple function like single-sign on. You can run this app locally or deploy it to Microsoft Azure. This app has a Tab frontend and a backend service using Azure Function.",
             "tags": ["Tab", "TS", "Azure function", "Ready to F5 Preview"]
         }
