feat: remove collaborators node, and update grant permission logic

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -251,7 +251,7 @@
         },
         {
           "command": "fx-extension.grantPermission",
-          "when": "view == teamsfx-environment && viewItem == addCollaborator",
+          "when": "view == teamsfx-environment && viewItem =~ /environment/",
           "group": "inline@3"
         }
       ],
