--- a/templates/function-base/js/default/package.json
+++ b/templates/function-base/js/default/package.json
@@ -5,6 +5,7 @@
         "start": "npx func start"
     },
     "dependencies": {
+        "@microsoft/microsoft-graph-client": "^3.0.0",
         "@microsoft/teamsfx": "^0.3.0",
         "isomorphic-fetch": "^3.0.0"
     }
