--- a/templates/tab/ts/default/package.json
+++ b/templates/tab/ts/default/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@fluentui/react-northstar": "^0.54.0",
+        "@microsoft/microsoft-graph-client": "^3.0.0",
         "@microsoft/teams-js": "^1.9.0",
         "@microsoft/teamsfx": "^0.3.0",
         "axios": "^0.21.1",
