--- a/.github/workflows/milestoned-azdo.yml
+++ b/.github/workflows/milestoned-azdo.yml
@@ -30,6 +30,6 @@ jobs:
           bug-label: "bug"
           bug-area-path: "Microsoft Teams Extensibility"
           bug-iteration-path: "Microsoft Teams Extensibility"
-          feature-label: "feature-request"
+          feature-label: ""
           feature-area-path: "Microsoft Teams Extensibility"
           feature-iteration-path: "Microsoft Teams Extensibility"
