perf: fix output

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -521,7 +521,7 @@
       },
       {
         "command": "fx-extension.listCollaborator",
-        "title": "List Collaborators",
+        "title": "List M365 Teams App (with AAD App) Owners",
         "icon": "$(organization)",
         "enablement": "fx-extension.isMultiEnvEnabled"
       },
