--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -20,7 +20,9 @@ jobs:
         id: list-cases
         working-directory: packages/cli
         run: |
-          cases=`find tests/e2e -name "*.tests.ts" | jq -R -s -c '[split("\n") | .[]| select(.!="")]'`
+          listCases=`find tests/e2e -name "*.tests.ts" | jq -R -s -c '[split("\n") | .[]| select(.!="")]'`
+          inputCases='${{ github.event.inputs.cases }}'
+          cases=`jq --argjson arr1 "$listCases" --argjson arr2 "$inputCases" -n '$arr1 + $arr2'
           echo "::set-output name=cases::$cases"
 
   execute-cases:
