--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           listCases=`find tests/e2e -name "*.tests.ts" | jq -R -s -c '[split("\n") | .[]| select(.!="")]'`
           inputCases='${{ github.event.inputs.cases }}'
-          cases=`jq --argjson arr1 "$listCases" --argjson arr2 "$inputCases" -n '$arr1 + $arr2'
+          cases=`jq --argjson arr1 "$listCases" --argjson arr2 "$inputCases" -n '$arr1 + $arr2'`
           echo "::set-output name=cases::$cases"
 
   execute-cases:
