--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -276,7 +276,7 @@
         },
         {
           "command": "fx-extension.grantPermission",
-          "when": "view == teamsfx-environment && viewItem == addCollaborator",
+          "when": "view == teamsfx-environment && viewItem =~ /environment/",
           "group": "inline@3"
         }
       ],
@@ -569,7 +569,7 @@
       },
       {
         "command": "fx-extension.grantPermission",
-        "title": "Grant permission",
+        "title": "Add M365 Teams App (with AAD App) Owners",
         "icon": "$(person-add)",
         "enablement": "fx-extension.isMultiEnvEnabled && fx-extension.isRemoteCollaborateEnabled"
       },
