chore: update docs

--- a/docs/cicd_insider/github-cd-template.yml
+++ b/docs/cicd_insider/github-cd-template.yml
@@ -19,8 +19,8 @@ jobs:
       M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
       M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
 
-      # The following line is to enable insider preview features.
-      TEAMSFX_INSIDER_PREVIEW: true
+      # insider preview features are enabled by default
+
       # To specify the env name for multi-env feature.
       TEAMSFX_ENV_NAME: staging
 
