feat: add error msg for 404 error and update wording

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -552,7 +552,7 @@
       },
       {
         "command": "fx-extension.updatePreviewFile",
-        "title": "Teams: Update manifest file",
+        "title": "Teams: Update manifest to Teams platform",
         "icon": "$(cloud-upload)",
         "enablement": "fx-extension.isMultiEnvEnabled"
       },
