fix(simpleauth): upgrade deprecated dependency

--- a/packages/simpleauth/src/TeamsFxSimpleAuth/Microsoft.TeamsFx.SimpleAuth.csproj
+++ b/packages/simpleauth/src/TeamsFxSimpleAuth/Microsoft.TeamsFx.SimpleAuth.csproj
@@ -29,13 +29,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.18" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="3.1.7" />
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.30.0" />
-    <PackageReference Include="NSwag.AspNetCore" Version="13.10.9" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.37.0" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.14.4" />
   </ItemGroup>
 
 
