--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -637,28 +637,28 @@
       },
       {
         "command": "fx-extension.openAccountLink",
-        "title": "Open account link",
+        "title": "Learn more about accounts",
         "icon": "$(info)"
       },
       {
         "command": "fx-extension.openEnvLink",
-        "title": "Open environment link",
+        "title": "Learn more about enviornments",
         "icon": "$(info)",
         "enablement": "fx-extension.isMultiEnvEnabled"
       },
       {
         "command": "fx-extension.openDevelopmentLink",
-        "title": "Open development link",
+        "title": "Learn more about development",
         "icon": "$(info)"
       },
       {
         "command": "fx-extension.openDeploymentLink",
-        "title": "Open deployment link",
+        "title": "Learn more about deployment",
         "icon": "$(info)"
       },
       {
         "command": "fx-extension.openHelpFeedbackLink",
-        "title": "Open help link",
+        "title": "Learn more about help and feedback",
         "icon": "$(info)"
       }
     ],
